Changed Rival version

--- a/project/pom.xml
+++ b/project/pom.xml
@@ -5,32 +5,43 @@
     <artifactId>RSSS2017</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
     <dependencies>
-        <dependency>
+	<dependency>
+	    <groupId>com.github.recommenders</groupId>
+	    <artifactId>rival</artifactId>
+	    <version>-SNAPSHOT</version>
+	</dependency>
+        <!-- dependency>
             <groupId>net.recommenders.rival</groupId>
             <artifactId>rival-core</artifactId>
-            <version>0.3-SNAPSHOT</version>
+            <version>${rival.version}</version>
         </dependency>
         <dependency>
             <groupId>net.recommenders.rival</groupId>
             <artifactId>rival-split</artifactId>
-            <version>0.3-SNAPSHOT</version>
+            <version>${rival.version}</version>
         </dependency>
         <dependency>
             <groupId>net.recommenders.rival</groupId>
             <artifactId>rival-recommend</artifactId>
-            <version>0.3-SNAPSHOT</version>
+            <version>${rival.version}</version>
         </dependency>
         <dependency>
             <groupId>net.recommenders.rival</groupId>
             <artifactId>rival-evaluate</artifactId>
-            <version>0.3-SNAPSHOT</version>
+            <version>${rival.version}</version>
         </dependency>
         <dependency>
             <groupId>net.recommenders.rival</groupId>
             <artifactId>rival-examples</artifactId>
-            <version>0.3-SNAPSHOT</version>
-        </dependency>
+            <version>${rival.version}</version>
+        </dependency -->
         <dependency>
             <groupId>org.ranksys</groupId>
             <artifactId>RankSys-nn</artifactId>
@@ -56,5 +67,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <rival.version>-SNAPSHOT</rival.version>
     </properties>
 </project>
